[gd_scene load_steps=31 format=1]

[ext_resource path="res://Scripts/GUI Layer.gd" type="Script" id=1]
[ext_resource path="res://Sounds/fireball.smp" type="Sample" id=2]
[ext_resource path="res://Sounds/ice.smp" type="Sample" id=3]
[ext_resource path="res://Textures/gui/EnemyHealthBarUnder.png" type="Texture" id=4]
[ext_resource path="res://Textures/gui/EnemyHealthBarOver.png" type="Texture" id=5]
[ext_resource path="res://Textures/gui/EnemyHealthBar.png" type="Texture" id=6]
[ext_resource path="res://Scripts/EnemyHealthBar.gd" type="Script" id=7]
[ext_resource path="res://Fonts/gui_font.fnt" type="BitmapFont" id=8]
[ext_resource path="res://Textures/gui/HealthPanel.png" type="Texture" id=9]
[ext_resource path="res://Textures/gui/DarkOrbUnder.png" type="Texture" id=10]
[ext_resource path="res://Textures/gui/DarkOrbBorder.png" type="Texture" id=11]
[ext_resource path="res://Textures/gui/blood_orb.png" type="Texture" id=12]
[ext_resource path="res://Textures/gui/ManaPanel.png" type="Texture" id=13]
[ext_resource path="res://Textures/gui/mana_orb.png" type="Texture" id=14]
[ext_resource path="res://Textures/gui/52x52 SpellSlotBorder.png" type="Texture" id=15]
[ext_resource path="res://Textures/gui/fireball_icon.png" type="Texture" id=16]
[ext_resource path="res://Textures/gui/icon_darkener.png" type="Texture" id=17]
[ext_resource path="res://Textures/gui/icicle_icon.png" type="Texture" id=18]
[ext_resource path="res://Textures/gui/healthpotion.png" type="Texture" id=19]
[ext_resource path="res://Fonts/hp_font.fnt" type="BitmapFont" id=20]
[ext_resource path="res://Textures/gui/manapotion.png" type="Texture" id=21]
[ext_resource path="res://Textures/gui/pause_menu_2.png" type="Texture" id=22]
[ext_resource path="res://Textures/gui/button.png" type="Texture" id=23]
[ext_resource path="res://Textures/gui/button_hover.png" type="Texture" id=24]
[ext_resource path="res://Fonts/gui_font_2.fnt" type="BitmapFont" id=25]
[ext_resource path="res://Textures/gui/sfxon.png" type="Texture" id=26]
[ext_resource path="res://Textures/gui/sfxoff.png" type="Texture" id=27]
[ext_resource path="res://Textures/gui/musicon.png" type="Texture" id=28]
[ext_resource path="res://Textures/gui/musicoff.png" type="Texture" id=29]

[sub_resource type="SampleLibrary" id=1]

samples/fireball = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 2 )
}
samples/ice = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 3 )
}

[node name="GUI Layer" type="CanvasLayer"]

process/pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="MusicPlayer" type="StreamPlayer" parent="."]

stream/stream = null
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="GUI" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0

[node name="TopBar" type="Control" parent="GUI"]

process/pause_mode = 1
editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 80.0
__meta__ = {
"_edit_group_": true
}

[node name="EnemyHealthBar" type="TextureProgress" parent="GUI/TopBar"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 490.0
margin/top = 20.0
margin/right = 790.0
margin/bottom = 60.0
range/min = 0.0
range/max = 20.0
range/step = 1.0
range/page = 0.0
range/value = 20.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 4 )
texture/over = ExtResource( 5 )
texture/progress = ExtResource( 6 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )
script/script = ExtResource( 7 )

[node name="Label" type="Label" parent="GUI/TopBar/EnemyHealthBar"]

rect/scale = Vector2( 0.75, 0.75 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 110.0
margin/top = 10.0
margin/right = 215.0
margin/bottom = 41.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Zombie"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BottomBar" type="Control" parent="GUI"]

process/pause_mode = 1
anchor/top = 1
anchor/bottom = 1
rect/scale = Vector2( 0.75, 0.75 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 100.0
margin/right = 1707.0
margin/bottom = -30.0

[node name="HealthFrame" type="TextureFrame" parent="GUI/BottomBar"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 530.0
margin/bottom = 130.0
texture = ExtResource( 9 )
stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="HealthBar" type="TextureProgress" parent="GUI/BottomBar/HealthFrame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -111.0
margin/right = 230.0
margin/bottom = 119.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 10 )
texture/over = ExtResource( 11 )
texture/progress = ExtResource( 12 )
mode = 3
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="GUI/BottomBar/HealthFrame/HealthBar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 120.0
margin/right = 180.0
margin/bottom = 185.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100/100
(+1)"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ManaFrame" type="TextureFrame" parent="GUI/BottomBar"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 542.0
margin/top = 130.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 13 )
stretch_mode = 0

[node name="ManaBar" type="TextureProgress" parent="GUI/BottomBar/ManaFrame"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 306.0
margin/top = -110.0
margin/right = 536.0
margin/bottom = 120.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 10 )
texture/over = ExtResource( 11 )
texture/progress = ExtResource( 14 )
mode = 3
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="GUI/BottomBar/ManaFrame/ManaBar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 60.0
margin/top = 120.0
margin/right = 177.0
margin/bottom = 185.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100/100
(+5)"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Ability1" type="TextureButton" parent="GUI/BottomBar/ManaFrame"]

hint/tooltip = "Fireball
Cost: 20 Mana"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 126.0
margin/top = 11.0
margin/right = 178.0
margin/bottom = 63.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="Frame" type="TextureFrame" parent="GUI/BottomBar/ManaFrame/Ability1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 15 )
stretch_mode = 0

[node name="Icon" type="TextureFrame" parent="GUI/BottomBar/ManaFrame/Ability1"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 52.0
margin/bottom = 52.0
texture = ExtResource( 16 )
stretch_mode = 0

[node name="Dark" type="TextureProgress" parent="GUI/BottomBar/ManaFrame/Ability1"]

visibility/opacity = 0.8
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = 24.0
margin/right = -24.0
margin/bottom = -24.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = ExtResource( 17 )
mode = 3
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="Label" type="Label" parent="GUI/BottomBar/ManaFrame/Ability1"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 26.0
margin/top = 16.0
margin/right = -26.0
margin/bottom = -24.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Ability2" type="TextureButton" parent="GUI/BottomBar/ManaFrame"]

hint/tooltip = "Ice Flurry
Cost: 35 Mana"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 180.0
margin/top = 11.0
margin/right = 232.0
margin/bottom = 63.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="Frame" type="TextureFrame" parent="GUI/BottomBar/ManaFrame/Ability2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 15 )
stretch_mode = 0

[node name="Icon" type="TextureFrame" parent="GUI/BottomBar/ManaFrame/Ability2"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 52.0
margin/bottom = 52.0
texture = ExtResource( 18 )
stretch_mode = 0

[node name="Dark" type="TextureProgress" parent="GUI/BottomBar/ManaFrame/Ability2"]

visibility/opacity = 0.8
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = 24.0
margin/right = -24.0
margin/bottom = -24.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = ExtResource( 17 )
mode = 3
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="Label" type="Label" parent="GUI/BottomBar/ManaFrame/Ability2"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 26.0
margin/top = 16.0
margin/right = -26.0
margin/bottom = -24.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HealthPotion" type="TextureButton" parent="GUI/BottomBar/ManaFrame"]

hint/tooltip = "Health Potion
CD: 15 sec"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 69.0
margin/right = 62.0
margin/bottom = 121.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="Frame" type="TextureFrame" parent="GUI/BottomBar/ManaFrame/HealthPotion"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 52.0
margin/bottom = 52.0
texture = ExtResource( 15 )
stretch_mode = 0

[node name="Icon" type="TextureFrame" parent="GUI/BottomBar/ManaFrame/HealthPotion"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 52.0
margin/bottom = 52.0
texture = ExtResource( 19 )
stretch_mode = 0

[node name="Dark" type="TextureProgress" parent="GUI/BottomBar/ManaFrame/HealthPotion"]

visibility/opacity = 0.8
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = 24.0
margin/right = -24.0
margin/bottom = -24.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = ExtResource( 17 )
mode = 3
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="Label" type="Label" parent="GUI/BottomBar/ManaFrame/HealthPotion"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 0.0
margin/top = 10.0
margin/right = 0.0
margin/bottom = 2.0
custom_fonts/font = ExtResource( 20 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ManaPotion" type="TextureButton" parent="GUI/BottomBar/ManaFrame"]

hint/tooltip = "Mana Potion
CD: 8 sec"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 67.0
margin/top = 69.0
margin/right = 119.0
margin/bottom = 121.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="Frame" type="TextureFrame" parent="GUI/BottomBar/ManaFrame/ManaPotion"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 52.0
margin/bottom = 52.0
texture = ExtResource( 15 )
stretch_mode = 0

[node name="Icon" type="TextureFrame" parent="GUI/BottomBar/ManaFrame/ManaPotion"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 52.0
margin/bottom = 52.0
texture = ExtResource( 21 )
stretch_mode = 0

[node name="Dark" type="TextureProgress" parent="GUI/BottomBar/ManaFrame/ManaPotion"]

visibility/opacity = 0.8
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = 24.0
margin/right = -24.0
margin/bottom = -24.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = ExtResource( 17 )
mode = 3
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="Label" type="Label" parent="GUI/BottomBar/ManaFrame/ManaPotion"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 10.0
margin/right = 0.0
margin/bottom = 2.0
custom_fonts/font = ExtResource( 20 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PauseMenu" type="Control" parent="GUI"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0

[node name="DarkEffect" type="TextureFrame" parent="GUI/PauseMenu"]

visibility/opacity = 0.6
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0
texture = ExtResource( 22 )
stretch_mode = 0

[node name="ResumeButton" type="TextureButton" parent="GUI/PauseMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 465.0
margin/top = 169.0
margin/right = 809.0
margin/bottom = 289.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 23 )
textures/hover = ExtResource( 24 )
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="GUI/PauseMenu/ResumeButton"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 88.0
margin/top = 16.0
margin/right = -94.0
margin/bottom = -21.0
custom_fonts/font = ExtResource( 25 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.667969, 0.509212, 0.206131, 1 )
text = "Resume"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ExitButton" type="TextureButton" parent="GUI/PauseMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 465.0
margin/top = 436.0
margin/right = 809.0
margin/bottom = 556.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 23 )
textures/hover = ExtResource( 24 )
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="GUI/PauseMenu/ExitButton"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 132.0
margin/top = 17.0
margin/right = -136.0
margin/bottom = -20.0
custom_fonts/font = ExtResource( 25 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.667969, 0.509212, 0.206131, 1 )
text = "Quit Game"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/PauseMenu"]

rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 504.0
margin/top = 296.0
margin/right = 572.0
margin/bottom = 328.0
alignment = 0

[node name="SFXButton" type="TextureButton" parent="GUI/PauseMenu/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 32.0
margin/bottom = 32.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 26 )
textures/pressed = ExtResource( 27 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="MusicButton" type="TextureButton" parent="GUI/PauseMenu/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 36.0
margin/top = 0.0
margin/right = 68.0
margin/bottom = 32.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 28 )
textures/pressed = ExtResource( 29 )
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="mouse_enter" from="GUI/BottomBar/ManaFrame" to="." method="_on_ManaFrame_mouse_enter"]

[connection signal="pressed" from="GUI/BottomBar/ManaFrame/Ability1" to="." method="_on_Ability1_pressed"]

[connection signal="pressed" from="GUI/BottomBar/ManaFrame/Ability2" to="." method="_on_Ability2_pressed"]

[connection signal="pressed" from="GUI/BottomBar/ManaFrame/HealthPotion" to="." method="_on_HealthPotion_pressed"]

[connection signal="pressed" from="GUI/BottomBar/ManaFrame/ManaPotion" to="." method="_on_ManaPotion_pressed"]

[connection signal="pressed" from="GUI/PauseMenu/ResumeButton" to="." method="_on_ResumeButton_pressed"]

[connection signal="pressed" from="GUI/PauseMenu/ExitButton" to="." method="_on_ExitButton_pressed"]

[connection signal="toggled" from="GUI/PauseMenu/HBoxContainer/SFXButton" to="." method="_on_SFXButton_toggled"]

[connection signal="toggled" from="GUI/PauseMenu/HBoxContainer/MusicButton" to="." method="_on_MusicButton_toggled"]


